--- a/testing/RAG/advanced_rag_pipeline/rag_triad_metrics.ipynb
+++ b/testing/RAG/advanced_rag_pipeline/rag_triad_metrics.ipynb
@@ -212,7 +212,7 @@
     "        provider.qs_relevance,              # Feedback function method\n",
     "        name=\"Context Relevance\")           # Human readable name for dashboard\n",
     "    .on_input()                             # Pointer to user query\n",
-    "    .on(context_selection)                  # Poiinter to retrieved contexts (intermediate results)\n",
+    "    .on(context_selection)                  # Pointer to retrieved contexts (intermediate results)\n",
     "    .aggregate(np.mean)                     # Aggregate score accross all retrieved context\n",
     ")"
    ]
