--- a/testing/classification/multi-class-classification/body-performance-dataset/statistical-analysis.ipynb
+++ b/testing/classification/multi-class-classification/body-performance-dataset/statistical-analysis.ipynb
@@ -58,7 +58,7 @@
     "import pandas as pd\n",
     "import statistics\n",
     "import scipy.stats\n",
-    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.pyplot as plt     # Use matplotlib>=3.6.3\n",
     "import seaborn as sns\n",
     "\n",
     "from scipy.stats import gmean\n",
